[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fonts/BaseFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://game/assets/sounds/correct.ogg" type="AudioStream" id=2]
[ext_resource path="res://game/assets/sounds/wrong.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/EvaluationPanel.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.172549, 0.239216, 0.298039, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="EvaluationPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 20, 101 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15

[node name="QuestionPanel" type="TabContainer" parent="MarginContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 585.0
custom_styles/tab_fg = SubResource( 2 )
custom_styles/tab_disabled = SubResource( 2 )
custom_styles/tab_bg = SubResource( 2 )
custom_styles/panel = SubResource( 2 )
tabs_visible = false

[node name="Steps" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 23.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )

[node name="CorrectAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 2 )

[node name="WrongAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 3 )
